--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.7",
+    "@mui/x-data-grid": "^5.17.22",
     "@next/font": "13.1.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
