--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.1.6",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
+    "pullstate": "^1.25.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
